--- a/package.json
+++ b/package.json
@@ -19,18 +19,13 @@
   "engines": {
     "node": ">=7.9.0"
   },
-  "devDependencies": {
-    "jasmine": "^3.1.0"
-  },
   "dependencies": {
     "@nimiq/core": "^1.4.3",
     "@nimiq/jungle-db": "^0.9.14",
     "bignumber": "^1.1.0",
     "btoa": "^1.2.1",
-    "jasmine-spec-reporter": "^4.2.1",
     "json5": "^1.0.1",
     "lodash.merge": "^4.6.1",
-    "minimist": "^1.2.0",
-    "mysql2": "^1.6.5"
+    "minimist": "^1.2.0"
   }
 }
