--- a/sample.conf
+++ b/sample.conf
@@ -1,64 +1,23 @@
 {
     // Pool server configuration
     poolServer: {
-        // Whether a pool server should run.
-        // Default: false
-        enabled: true,
-
         // Specifies which port to listen on for connections.
         // Possible values: any valid port number
         // Default: 8444
         //port: 8444,
 
         // Certificate file and private key file to use for the TLS secured server.
-        sslCertPath: './mypool.cer',
-        sslKeyPath: './mypool.key',
-
-        // Password of the MySQL pool_server user.
-        mySqlPsw: '',
-
-        // Host the MySQL database runs on.
-        // Default: 'localhost'
-        mySqlHost: 'localhost'
-    },
-
-    // Pool service configuration
-    poolService: {
-        // Whether a pool service should run.
-        // Default: false
-        enabled: true,
-
-        // Password of the MySQL pool_service user.
-        mySqlPsw: '',
-
-        // Host the MySQL database runs on.
-        // Default: 'localhost'
-        mySqlHost: 'localhost'
+        sslCertPath: './my.domain.cer',
+        sslKeyPath: './my.domain.key'
     },
 
     // General mining pool configuration
     pool: {
         // Name announced to the client.
-        name: 'My Nimiq Pool',
+        name: 'Micro Pool',
 
         // Pool address which the clients will set as miner address.
         address: 'NQ07 0000 0000 0000 0000 0000 0000 0000 0000',
-
-        // Confirmations required before shares for a block are rewarded.
-        // Default: 10
-        //payoutConfirmations: 10,
-
-        // The pool will automatically pay out users having accumulated over autoPayOutLimit satoshis.
-        // Default: 5000000 (50 NIM)
-        //autoPayOutLimit: 5000000,
-
-        // The pool will keep (blockReward + feesInBlock) * poolFee for itself.
-        // Default: 0.01
-        //poolFee: 0.01,
-
-        // Network fee used by the pool for payouts (in satoshi per byte).
-        // Default: 1
-        //networkFee: 1,
 
         // Difficulty initially expected from a client before any adjustment
         // Default: 1,
@@ -76,14 +35,6 @@
         // Default: 0.2
         //desiredSps: 0.2,
 
-        // Shares mined onto the previous pplnsBlocks are taken into account for block reward payout.
-        // Default: 10
-        //pplnsBlocks: 10,
-
-        // Interval in which all meanwhile accumulated shares are written to the database
-        // Default: 1000 * 10 (10 sec)
-        //flushSharesInterval: 1000 * 10,
-
         // If no valid shares are sent over a connection during connectionTimeout [ms], it is closed.
         // Default: 60 * 1000 * 10 (10 min)
         //connectionTimeout: 60 * 1000 * 10,
@@ -100,23 +51,22 @@
 
         // Number of allowed errors (invalid shares) between new settings.
         // Default: 30
-        allowedErrors: 300
+        //allowedErrors: 30
     },
 
     // Nimiq Core configuration
     // See https://github.com/nimiq-network/core/blob/master/clients/nodejs/sample.conf for more information.
 
-    host: "mypool",
+    host: "my.domain",
     //port: 8443,
     tls: {
-        cert: "./mypool.cer",
-        key: "./mypool.key"
+        cert: "./my.domain.cer",
+        key: "./my.domain.key"
     },
-    dumb: "yes",
-    type: "full",
-    network: "main",
+    protocol: "dumb",
+    //type: "full",
+    //network: "test",
     log: {
         //level: "verbose"
     }
 }
-
