Updated sample configs with new options

--- a/payout.sample.conf
+++ b/payout.sample.conf
@@ -33,6 +33,17 @@
         // Default: 0.01
         //poolFee: 0.01,
 
+        // The following object is used by the endpoints to describe your pool.
+        // Default: description and both links are blank, payoutType is "Manual", payoutFrequency is blank, supportsNano is false
+        //poolInfo: {
+        //    description : "",
+        //    websiteLink : "",
+        //    communityLink : "",
+        //    payoutType : "Automatic",
+        //    payoutFrequency : "every 3 hours",
+        //    supportsNano : false
+        //},
+
         // Network fee used by the pool for payouts (in satoshi per byte).
         // Default: 1
         //networkFee: 1,
